# message-dispatch

./: Cargo.toml  README.md
src/: CompressedTypeIdentifier.rs  Dequeue.rs  Enqueue.rs  Message.rs  MessageHandlers.rs  MessageHandlersRegistration.rs  MessageHeader.rs  PerThreadQueueSubscriber.rs  Publisher.rs  Queue.rs  QueuePerThreadQueuesPublisher.rs  Queues.rs  RoundRobinPublisher.rs  Subscriber.rs  VariablySized.rs  lib.android_linux.rs  lib.rs  round_up_to_alignment.rs
src/erased_boxed_functions/: BoxedFunctionPointer.rs  CompressedTypeIdentifier.rs  DropVariablySizedMessageBodyInPlaceFunctionPointer.rs  MutableTypeErasedBoxedFunction.rs  MutableTypeErasedBoxedFunctionCompressedMap.rs  Receiver.rs  Register.rs  mod.rs
src/message/: Message.rs  MessageHeader.rs  MessageRepresentation.rs  VariablySizedMessageBody.rs  VariablySizedPadding.rs  VariablySizedPaddingThenAVariablySizedMessageBodyThenVariablySizedPadding.rs  mod.rs
src/message_handling/: MessageHandler.rs  mod.rs
src/virtual_method_tables/: DropInPlaceFunctionPointer.rs  TaggedNonNullPointer.rs  VirtualMethodTablePointer.rs  mod.rs
