# This file is part of message-dispatch. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/message-dispatch/master/COPYRIGHT. No part of message-dispatch, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2019-2020 The developers of message-dispatch. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/message-dispatch/master/COPYRIGHT.


[package]
name = "message-dispatch"
description = "message-dispatch"
keywords = ["message-dispatch"]
categories = []
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/message-dispatch"
repository = "https://github.com/lemonrock/message-dispatch.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
edition = "2018"
version = "0.2.0"

[dependencies]
static_assertions = "^1.1"

[target.'cfg(all(target_os = "linux", target_pointer_width = "64"))'.dependencies]
arrayvec = { version = "^0.7.0", features = ["std", "serde"] }
libc = { version = "^0.2.93", features = ["const-extern-fn", "extra_traits", "std"] }
linux-support = { version = "^0.0.26", path = "../linux-support" }
magic-ring-buffer = { version = "^0.3.1", path = "../magic-ring-buffer" }
swiss-army-knife = { version = "^0.0.37", path = "../swiss-army-knife" }
terminate = { version = "^0.2.1", path = "../terminate" }
